--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@
   --control-width: 200px;
   --demo-width: calc(100vw - var(--control-width));
   --nav-height: 60px;
-  --main-height: calc(100vh - var(--nav-height));
+  --nav-pos-height: 40px;
+  --main-height: calc(100vh - var(--nav-height) - var(--nav-pos-height));
 }
 
 *,
@@ -34,8 +35,7 @@ body {
   color: var(--black);
   background-color: var(--white);
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Mulish", sans-serif;
 }
 
 button {
