--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
   color: var(--black);
   background-color: var(--white);
   font-size: 16px;
-  font-family: "Mulish", sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 button {
