--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,11 @@
 
   --nav-height: 60px;
   --footer-height: 275px;
-  --main-height: calc(100vh - var(--nav-height));
-  --main-height-footer: calc(100vh - var(--nav-height) - var(--footer-height));
+  --main-height: max(calc(100vh - var(--nav-height)), 400px);
+  --main-height-footer: max(
+    calc(100vh - var(--nav-height) - var(--footer-height)),
+    400px
+  );
 
   --sm-cont: 300px;
   --md-cont: 600px;
